# Living-Outcomes

./: .gitignore  README.md  vercel.json
backend/: .env.example  pyproject.toml  requirements.txt
backend/api/: index.py
backend/app/: chain.py  config.py  dependencies.py  main.py
backend/app/abis/: AgentRegistry.json  BundleRegistry.json  PerformanceOracle.json  StrategyMarketplace.json  StrategyNFT.json
backend/app/models/: domain.py
backend/app/routes/: bundles.py  health.py  leaderboard.py  strategies.py
backend/app/services/: bundle.py  leaderboard.py  strategy.py
backend/tests/: test_backend.py
contracts/script/: Deploy.s.sol
contracts/src/: AgentRegistry.sol  BundleRegistry.sol  PerformanceOracle.sol  StrategyMarketplace.sol  StrategyNFT.sol
contracts/test/: LivingOutcomes.t.sol
frontend/: .env.example  .env.production  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: BundleCard.jsx  BundleCard.module.css  Loader.jsx  Loader.module.css  Nav.jsx  Nav.module.css  StrategyCard.jsx  StrategyCard.module.css
frontend/src/lib/: api.js  mockData.js  useApi.js
frontend/src/pages/: BundleDetail.jsx  BundleDetail.module.css  Bundles.jsx  Bundles.module.css  Landing.jsx  Landing.module.css  Leaderboard.jsx  Leaderboard.module.css  Strategies.jsx  Strategies.module.css  StrategyDetail.jsx  StrategyDetail.module.css
