[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[project]
name = "living-outcomes-backend"
version = "0.1.0"
requires-python = ">=3.12"

[project.dependencies]
fastapi = ">=0.115.0"
uvicorn = {version = ">=0.30.0", extras = ["standard"]}
sqlalchemy = ">=2.0"
alembic = ">=1.13"
web3 = ">=7.0"
httpx = ">=0.27"
python-dotenv = ">=1.0"
pydantic-settings = ">=2.0"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
